{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 24,
  "lineage": "98f97f8b-b4b0-804d-0964-159650b80345",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248570250741:internet-gateway/igw-00eb45b3d3491a4df",
            "id": "igw-00eb45b3d3491a4df",
            "owner_id": "248570250741",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary",
              "Team": "Network"
            },
            "vpc_id": "vpc-02ed0444f12cd4e9e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00eb45b3d3491a4df",
            "id": "r-rtb-020e7de3c97e3fa711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-020e7de3c97e3fa71",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0013608d1655150b1",
            "owner_id": "248570250741",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1a",
              "Team": "Network"
            },
            "vpc_id": "vpc-02ed0444f12cd4e9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0277bf230bdf544ca",
            "owner_id": "248570250741",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1b",
              "Team": "Network"
            },
            "vpc_id": "vpc-02ed0444f12cd4e9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04c7998e674cb61f7",
            "owner_id": "248570250741",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1c",
              "Team": "Network"
            },
            "vpc_id": "vpc-02ed0444f12cd4e9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-020e7de3c97e3fa71",
            "owner_id": "248570250741",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00eb45b3d3491a4df",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-public",
              "Team": "Network"
            },
            "vpc_id": "vpc-02ed0444f12cd4e9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa6169285d63205e",
            "route_table_id": "rtb-0013608d1655150b1",
            "subnet_id": "subnet-09465fa3180007e04"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c216cafeb34f407",
            "route_table_id": "rtb-0277bf230bdf544ca",
            "subnet_id": "subnet-0aa699cbd391eb81f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dd0c54e22db3df1",
            "route_table_id": "rtb-04c7998e674cb61f7",
            "subnet_id": "subnet-0ea458cad8e26f447"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d99d2d9e5345f804",
            "route_table_id": "rtb-020e7de3c97e3fa71",
            "subnet_id": "subnet-0c2f8efa3420a6dac"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bdf4738d3363348",
            "route_table_id": "rtb-020e7de3c97e3fa71",
            "subnet_id": "subnet-043dc41efa0216ed6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e73eeed42bf646e",
            "route_table_id": "rtb-020e7de3c97e3fa71",
            "subnet_id": "subnet-06177f8a4fa847e09"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248570250741:subnet/subnet-09465fa3180007e04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-09465fa3180007e04",
            "map_public_ip_on_launch": false,
            "owner_id": "248570250741",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1a",
              "Team": "Network"
            },
            "vpc_id": "vpc-02ed0444f12cd4e9e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248570250741:subnet/subnet-0aa699cbd391eb81f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0aa699cbd391eb81f",
            "map_public_ip_on_launch": false,
            "owner_id": "248570250741",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1b",
              "Team": "Network"
            },
            "vpc_id": "vpc-02ed0444f12cd4e9e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248570250741:subnet/subnet-0ea458cad8e26f447",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-0ea458cad8e26f447",
            "map_public_ip_on_launch": false,
            "owner_id": "248570250741",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1c",
              "Team": "Network"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-02ed0444f12cd4e9e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248570250741:subnet/subnet-0c2f8efa3420a6dac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0c2f8efa3420a6dac",
            "map_public_ip_on_launch": true,
            "owner_id": "248570250741",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-public-us-east-1a",
              "Team": "Network"
            },
            "vpc_id": "vpc-02ed0444f12cd4e9e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248570250741:subnet/subnet-043dc41efa0216ed6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-043dc41efa0216ed6",
            "map_public_ip_on_launch": true,
            "owner_id": "248570250741",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-public-us-east-1b",
              "Team": "Network"
            },
            "vpc_id": "vpc-02ed0444f12cd4e9e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248570250741:subnet/subnet-06177f8a4fa847e09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-06177f8a4fa847e09",
            "map_public_ip_on_launch": true,
            "owner_id": "248570250741",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-public-us-east-1c",
              "Team": "Network"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-02ed0444f12cd4e9e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248570250741:vpc/vpc-02ed0444f12cd4e9e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c265c9b872e326b8",
            "default_route_table_id": "rtb-09132d4f812a0bbe0",
            "default_security_group_id": "sg-01d1a2e9f31f15c5a",
            "dhcp_options_id": "dopt-cccc4fb6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02ed0444f12cd4e9e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09132d4f812a0bbe0",
            "owner_id": "248570250741",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary",
              "Team": "Network"
            }
          }
        }
      ]
    }
  ]
}